[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 64.0

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="DateLabel" type="Label" parent="Panel/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Day 1 / 7ã€€æœ"

[node name="ActionLabel" type="Label" parent="Panel/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "è¡Œå‹•: 2"

[node name="MoneyLabel" type="Label" parent="Panel/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "ğŸ’° 5000å††"
